<resources>
    <string name="app_name">Grußkartengenerator</string>
    <string name="infoText">Toller Grußkartenenerator</string>
    <string name="wetter">Wetter auswählen :</string>
    <string name="Ort_eintragen">Ort eintragen</string>
    <string name="sun">Sonne</string>
    <string name="rain">Regen</string>
    <string name="snow">Schnee</string>
    <string name="Bewoelkt">Bewölkt</string>
    <string name="namehint">Name eingeben</string>
    <string name="continueButton">Foto aufnehmen unter fortfahren</string>
    <string name="changecolor">Textfarbe ändern</string>
    <string name="black">Schwarz</string>
    <string name="white">Weiß</string>
    <string name="red">Rot</string>
    <string name="blue">Blau</string>
    <string name="green">Grün</string>
    <string name="speichernButton">Grußkarte speichern</string>
</resources>
