<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/namehint"/>
    <EditText
        android:id="@+id/ort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Ort_eintragen"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wetter"
        android:layout_weight="1"/>

    <RadioGroup
        android:id="@+id/maingroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2">
    <RadioButton
        android:id="@+id/sonnige"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sun"/>
    <RadioButton
        android:id="@+id/regnerische"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rain"/>
    <RadioButton
        android:id="@+id/frostige"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snow"/>
        <RadioButton
            android:id="@+id/bewoelkte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Bewoelkt"/>
    </RadioGroup>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continueButton"
        android:id="@+id/continueButton"></Button>

</LinearLayout>